--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "6.1.2",
+    "i18next-scanner": "3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
