--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next-scanner": "3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-i18next": "^14.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
