--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@remixicon/react": "^4.2.0",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "6.1.2",
@@ -22,8 +25,11 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-i18next": "^14.1.0",
+    "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
